# finite-repr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
finite-repr-core/: Cargo.toml  README.md
finite-repr-core/src/: finite_repr.rs  finite_value.rs  lib.rs  traits.rs
finite-repr-derive/: Cargo.toml  README.md
finite-repr-derive/src/: finite_decoding.rs  finite_encoding.rs  finite_repr.rs  impl_error.rs  lib.rs
finite-repr-derive/src/codegen/: bounds.rs  enum_codegen.rs  field_codegen.rs  mod.rs
finite-repr-derive/tests/: init.rs  test_derive_decoding.rs  test_derive_encoding.rs  test_derive_repr.rs  test_isomorphism.rs
