[package]
name = "finite_repr_derive"
version = "0.1.2"
authors = ["akst <contact@akst.io>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["macro", "encoding", "decoding"]
description = "Proc Macro for the finite_repr crate"
homepage = "https://github.com/mythos-rs/finite-repr/tree/master/finite-repr-derive"
repository = "https://github.com/mythos-rs/finite-repr"
readme = "README.md"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/init.rs"

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"

[dev-dependencies]
trybuild = "1.0.30"
finite_repr = { version = "0.1", path = "../finite-repr-core", features = ["derive"] }
